cmake_minimum_required(VERSION 3.16)
project(PathFinding CXX)

set(CMAKE_CXX_STANDARD 17)

set(SFML_DIR "C:/SFML-2.6.1/lib/cmake/SFML")
find_package(SFML 2.6 REQUIRED COMPONENTS graphics window system)

file(GLOB_RECURSE SOURCES "src/*.cpp")

add_executable(PathFinding ${SOURCES})

target_link_libraries(PathFinding
    sfml-graphics
    sfml-window
    sfml-system
)

add_custom_command(TARGET PathFinding POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:PathFinding>/assets)